# banka_na_ostro

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: backend.yml  bank.yml  codeql.yml  deploy.yml  docker.yml  frontend.yml
backend/: CMakeLists.txt  vcpkg.json
backend/db/: 10.xml  2.xml  database.xml
backend/include/models/: Balance.hpp  BankData.hpp  ExchangeRate.hpp  Money.hpp  Payment.hpp  UserAccount.hpp
backend/include/services/: SiteFunctionality.hpp
backend/lib/models/: Balance.cpp  BankData.cpp  ExchangeRate.cpp  Money.cpp  Payment.cpp  UserAccount.cpp
backend/scripts/: compute_test_coverage.sh  install_dependencies.sh
backend/src/: Api.hpp  App.hpp  CMakeLists.txt
backend/src/include/data/models/: Balance.hpp  ExchangeRate.hpp  Money.hpp  Payment.hpp  UserAccount.hpp
backend/src/include/models/: BankData.hpp  ExchangeRate.hpp  UserAccount.hpp
backend/src/include/services/: JsonBuilder.hpp  SiteFunctionality.hpp
backend/src/lib/data/: ApplicationDbContext.cpp
backend/src/lib/data/models/: Balance.cpp  BankData.cpp  UserAccount.cpp
backend/src/lib/models/: BankData.cpp  UserAccount.cpp
backend/src/lib/services/: BusinessLogic.cpp  JsonBuilder.cpp
backend/tests/: TestModel.cpp
bank/: CMakeLists.txt  Dockerfile  main.cpp
bank/bank/: Bank.cpp  Bank.hpp  CMakeLists.txt
bank/bank/include/data/: ApplicationDbContext.hpp
bank/bank/include/data/models/: Balance.hpp  BankData.hpp  Money.hpp  Payment.hpp  UserAccount.hpp
bank/bank/include/pages/: ErrorPage.hpp  LoginPage.hpp  UserAccount.cpp  UserAccount.h  UserAccountPage.hpp  VerificationNoticePage.hpp
bank/bank/include/pages/Shared/: Page.hpp  PageRoute.hpp
bank/bank/include/services/: AuthStatus.h  BusinessLogic.hpp  SiteFunctionality.hpp
bank/bank/lib/data/: ApplicationDbContext.cpp
bank/bank/lib/data/models/: Balance.cpp  BankData.cpp  ExchangeRate.cpp  Payment.cpp  UserAccount.cpp
bank/bank/lib/pages/: ErrorPage.cpp  LoginPage.cpp  UserAccountPage.cpp  VerificationNoticePage.cpp
bank/bank/lib/services/: BusinessLogic.cpp
bank/configs/: msmtprc  ubuntu_apache.conf  ubuntu_nginx.com
bank/db/: 1.xml  10.xml  2.xml  3.xml
bank/scripts/: compute_test_coverage.sh  deploy.sh  install_dependencies.sh  install_web_app.sh
bank/src/: Api.cpp  Api.hpp  Bank.hpp  CMakeLists.txt
bank/src/include/data/: ApplicationDbContext.hpp
bank/src/include/data/models/: BankData.hpp
bank/src/lib/data/models/: Payment.cpp
bank/tests/: TestAppDbContext.cpp  TestBusinessLogic.cpp  TestModel.cpp  TestParsingCurrencyTextFile.cpp  test_denni_kurz.txt  test_http_get.sh  test_send_email.sh  test_user_acc_load.sh
docs/: ConOps.md  zadani.md
frontend/: CMakeLists.txt
